* Tags command * Projects command

--- a/.env.dist
+++ b/.env.dist
@@ -1,4 +1,4 @@
-TOMATO_BRANCHES=master,dev
+TOMATO_BRANCHES=master,develop
 TOMATO_PROJECTS=group1|one,two,three#group2|four,five,six
 
 TOMATO_GIT_ORG=MyOrg
