--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,14 @@
         }
     },
     "require": {
+        "php": "^7.1.3",
         "symfony/console": "^4.0",
         "pimple/pimple": "^3.2",
         "knplabs/github-api": "^2.7",
         "php-http/guzzle6-adapter": "^1.1",
         "league/climate": "^3.2",
         "phpseclib/phpseclib": "^2.0",
-        "symfony/dotenv": "^4.1"
+        "symfony/dotenv": "^4.1",
+        "composer/semver": "^1.4"
     }
 }
