--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,8 @@
         "phpseclib/phpseclib": "^2.0",
         "symfony/dotenv": "^4.1",
         "composer/semver": "^1.4"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9"
     }
 }
