--- a/composer.json
+++ b/composer.json
@@ -25,4 +25,8 @@
         "symfony/dotenv": "^4.1",
         "composer/semver": "^1.4"
     }
+    ,
+    "require-dev": {
+        "roave/security-advisories": "dev-master"
+    }
 }
